; ModuleID = '/home/carl/AnghaBench/vlc/modules/control/dbus/extr_dbus_root.c_MarshalCanRaise.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/control/dbus/extr_dbus_root.c_MarshalCanRaise.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@DBUS_TYPE_BOOLEAN = common dso_local global i32 0, align 4
@VLC_ENOMEM = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @MarshalCanRaise to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @MarshalCanRaise(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @VLC_UNUSED(i32* %7)
  %9 = load i32, i32* @TRUE, align 4
  store i32 %9, i32* %6, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* @DBUS_TYPE_BOOLEAN, align 4
  %12 = call i32 @dbus_message_iter_append_basic(i32* %10, i32 %11, i32* %6)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %16, label %14

14:                                               ; preds = %2
  %15 = load i32, i32* @VLC_ENOMEM, align 4
  store i32 %15, i32* %3, align 4
  br label %18

16:                                               ; preds = %2
  %17 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %16, %14
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @VLC_UNUSED(i32*) #1

declare dso_local i32 @dbus_message_iter_append_basic(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
